# native-audio-pipe

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTES.md  README.md
agents/: README.md
benchmarks/nodes/: Bench_BiQuadFilter.cpp  Bench_BiQuadFilter.h  Bench_Compressor.cpp  Bench_Compressor.h  Bench_DelayLine.cpp  Bench_DelayLine.h  Bench_GainNode.cpp  Bench_GainNode.h  Bench_Gate.cpp  Bench_Gate.h  Bench_Limiter.cpp  Bench_Limiter.h  Bench_Mixer.cpp  Bench_Mixer.h  Bench_Oscillator.cpp  Bench_Oscillator.h  Bench_ReverbConvolution.cpp  Bench_ReverbConvolution.h  Bench_Splitter.cpp  Bench_Splitter.h
cmake/: FindCoreAudio.cmake  FindGTest.cmake
docs/: adding-a-node.md  architecture.md
docs/api/: BiQuadFilter.md
docs/architecture/: BiQuadFilter.md
docs/nodes/: BiQuadFilter.md  BitCrusher.md  Chorus.md  DCBlockerNode.md  FileStreamReader.md  Flanger.md  GainNode.md  HardClipper.md  ImpulseGenerator.md  InverterNode.md  MeterNode.md  MixerNode.md  PanNode.md  Phaser.md  PinkNoise.md  ReverbConvolution.md  RingModulator.md  ScopeNode.md  SimpleDelay.md  SineOscillator.md  SoftClipper.md  SplitterNode.md  SummerNode.md  WhiteNoise.md
src/api/: IAudioNode.h  IAudioSink.h  IAudioSource.h  IParameter.h
src/core/graph/: AudioGraph.cpp  AudioGraph.h  ConnectionManager.cpp  ConnectionManager.h  ExecutionSorter.cpp  ExecutionSorter.h  FeedbackLoopDetector.cpp  FeedbackLoopDetector.h
src/core/memory/: AudioBlockAllocator.cpp  AudioBlockAllocator.h  CircularBuffer.cpp  CircularBuffer.h  PoolAllocator.cpp  PoolAllocator.h
src/core/parameters/: BoolParameter.cpp  BoolParameter.h  EnumParameter.cpp  EnumParameter.h  FloatParameter.cpp  FloatParameter.h  IntParameter.cpp  IntParameter.h  ParameterGroup.cpp  ParameterGroup.h  TriggerParameter.cpp  TriggerParameter.h
src/core/serialization/: BinarySerializer.cpp  BinarySerializer.h  ISerializer.h  JsonSerializer.cpp  JsonSerializer.h  PresetManager.cpp  PresetManager.h  StateVector.cpp  StateVector.h
src/core/threading/: SpinLock.cpp  SpinLock.h  TaskQueue.cpp  TaskQueue.h  ThreadBarrier.cpp  ThreadBarrier.h  WorkerThread.cpp  WorkerThread.h
src/drivers/: ASIODriver.cpp  ASIODriver.h  AlsaDriver.cpp  AlsaDriver.h  DummyDriver.cpp  DummyDriver.h  IAudioDriver.h  JackDriver.cpp  JackDriver.h  PulseAudioDriver.cpp  PulseAudioDriver.h
src/drivers/alsa/: AlsaDriver.cpp  AlsaDriver.h  AlsaMidiDriver.cpp  AlsaMidiDriver.h
src/drivers/asio/: ASIOBufferSwitch.cpp  ASIOBufferSwitch.h  ASIODriver.cpp  ASIODriver.h
src/drivers/coreaudio/: CoreAudioDeviceList.cpp  CoreAudioDeviceList.h  CoreAudioDriver.cpp  CoreAudioDriver.h
src/drivers/dummy/: NullAudioDriver.cpp  NullAudioDriver.h
src/drivers/jack/: JackClient.cpp  JackClient.h  JackDriver.cpp  JackDriver.h
src/events/: MidiMessage.cpp  MidiMessage.h  SysexMessage.cpp  SysexMessage.h
src/nodes/effect/: BiQuadFilter.cpp  BiQuadFilter.h  BiQuadFilterFactory.h  BitCrusher.cpp  BitCrusher.h  BitCrusherFactory.h  Chorus.cpp  Chorus.h  ChorusFactory.h  Flanger.cpp  Flanger.h  FlangerFactory.h  HardClipper.cpp  HardClipper.h  HardClipperFactory.h  Phaser.cpp  Phaser.h  PhaserFactory.h  ReverbConvolution.cpp  ReverbConvolution.h  ReverbConvolutionFactory.h  RingModulator.cpp  RingModulator.h  RingModulatorFactory.h  SimpleDelay.cpp  SimpleDelay.h  SimpleDelayFactory.h  SoftClipper.cpp  SoftClipper.h  SoftClipperFactory.h
src/nodes/math/: GainNode.cpp  GainNode.h  GainNodeFactory.h  InverterNode.cpp  InverterNode.h  InverterNodeFactory.h  MixerNode.cpp  MixerNode.h  MixerNodeFactory.h  PanNode.cpp  PanNode.h  PanNodeFactory.h  SplitterNode.cpp  SplitterNode.h  SplitterNodeFactory.h  SummerNode.cpp  SummerNode.h  SummerNodeFactory.h
src/nodes/source/: FileStreamReader.cpp  FileStreamReader.h  FileStreamReaderFactory.h  ImpulseGenerator.cpp  ImpulseGenerator.h  ImpulseGeneratorFactory.h  PinkNoise.cpp  PinkNoise.h  PinkNoiseFactory.h  SineOscillator.cpp  SineOscillator.h  SineOscillatorFactory.h  WhiteNoise.cpp  WhiteNoise.h  WhiteNoiseFactory.h
src/nodes/utility/: DCBlockerNode.cpp  DCBlockerNode.h  DCBlockerNodeFactory.h  MeterNode.cpp  MeterNode.h  MeterNodeFactory.h  ScopeNode.cpp  ScopeNode.h  ScopeNodeFactory.h
src/utils/dsp/: DCBlocker.cpp  DCBlocker.h  FastFourierTransform.cpp  FastFourierTransform.h  Resampler.cpp  Resampler.h  WindowFunctions.cpp  WindowFunctions.h
templates/: README.md
tests/unit/core/graph/: Test_AudioGraph.cpp  Test_ConnectionManager.cpp  Test_ExecutionSorter.cpp  Test_FeedbackLoopDetector.cpp
tests/unit/core/memory/: Test_AudioBlockAllocator.cpp  Test_CircularBuffer.cpp  Test_PoolAllocator.cpp
tests/unit/core/parameters/: Test_BoolParameter.cpp  Test_EnumParameter.cpp  Test_FloatParameter.cpp  Test_IntParameter.cpp  Test_ParameterGroup.cpp  Test_TriggerParameter.cpp
tests/unit/core/serialization/: Test_BinarySerializer.cpp  Test_JsonSerializer.cpp  Test_PresetManager.cpp  Test_StateVector.cpp
tests/unit/core/threading/: Test_SpinLock.cpp  Test_TaskQueue.cpp  Test_ThreadBarrier.cpp  Test_WorkerThread.cpp
tests/unit/drivers/: Test_ASIODriver.cpp  Test_AlsaDriver.cpp  Test_DummyDriver.cpp  Test_JackDriver.cpp  Test_PulseAudioDriver.cpp
tests/unit/nodes/effect/: Test_BiQuadFilter.cpp  Test_BitCrusher.cpp  Test_Chorus.cpp  Test_Flanger.cpp  Test_HardClipper.cpp  Test_Phaser.cpp  Test_ReverbConvolution.cpp  Test_RingModulator.cpp  Test_SimpleDelay.cpp  Test_SoftClipper.cpp
tests/unit/nodes/math/: Test_GainNode.cpp  Test_InverterNode.cpp  Test_MixerNode.cpp  Test_PanNode.cpp  Test_SplitterNode.cpp  Test_SummerNode.cpp
tests/unit/nodes/source/: Test_FileStreamReader.cpp  Test_ImpulseGenerator.cpp  Test_PinkNoise.cpp  Test_SineOscillator.cpp  Test_WhiteNoise.cpp
tests/unit/nodes/utility/: Test_DCBlockerNode.cpp  Test_MeterNode.cpp  Test_ScopeNode.cpp
tests/unit/utils/dsp/: Test_DCBlocker.cpp  Test_FastFourierTransform.cpp  Test_Resampler.cpp  Test_WindowFunctions.cpp
